[tool.poetry]
name = "car-analysis"
version = "0.1.0"
description = ""
authors = ["Влада <@vlada>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
structlog = "^24.4.0"
openpyxl = "^3.1.5"
matplotlib = "^3.9.2"
# notebook = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
